[FIX] 마이페이지 내 모임 조회 수정
- 커서 기반 삭제 -> List 형식
- MyPlubbingStatus 추가